@@ -72,3 +72,4 @@ Please report bugs to mailto:phpwiki-talk@lists.sourceforge.net
 * Grant Morgan http://c2.com/cgi-bin/wiki?GrantMorgan,
 * and especially Clifford A. Adams: http://c2.com/cgi-bin/wiki?CliffordAdams
 
+ $Id: CREDITS,v 1.2 2001-12-27 18:11:11 carstenklapp Exp $
