@@ -1,4 +1,6 @@
 /*
+  $Id: phpwiki-modern.css,v 1.2 2001-12-27 18:11:34 carstenklapp Exp $
+
   Visit http://www.timestretch.com/db/home/load/36/ to see the inspiration for this stylesheet.
 
   Classes:
