@@ -1,4 +1,6 @@
 /*
+  $Id: phpwiki.css,v 1.19 2001-12-27 18:11:44 carstenklapp Exp $
+
   Classes:
 
   DIV.wikitext - the transformed wiki page text.
