@@ -324,3 +324,5 @@ URL's.
 
 Prior to 0.02, there were no numbered releases, and in fact there
 was only one release, so I guess that would be 0.01 :-)
+
+$Id: HISTORY,v 1.2 2001-12-27 18:11:17 carstenklapp Exp $
